# Bureau

./: .gitignore  README.md  com.tenderowl.bureau.json  meson.build
build-aux/: com.tenderowl.bureau.json  gnome-online-accounts.json  gobject-data-mapper.json  python3-fastlog.json  python3-imapclient.json  python3-inject.json
bureau/: content_page.py  main.py  window.py
bureau/components/sidebar/: column.py  sidebar.py
bureau/models/: mailbox.py
bureau/providers/: account_provider.py  app_state.py  db.py  imap.py
data/: bureau.gresource.xml  com.tenderowl.bureau.desktop.in  com.tenderowl.bureau.gschema.xml  com.tenderowl.bureau.metainfo.xml.in  meson.build
data/icons/: meson.build
data/ui/: content_page.blp  window.blp
data/ui/sidebar/: column.blp  sidebar.blp
po/: POTFILES  meson.build
